<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Acoustic Modem</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="status_backlog">Backlog:</string>
    <string name="status_backlog_units">ms</string>
    <string name="status_found_key">(receiving text)</string>
    <string name="status_playing">Playing&#8230;</string>
    <string name="play_text_hint">Type some text to play</string>
    <string name="play_option_compression">Compress</string>
    <string name="play_option_checksum">Checksum</string>
    <string name="play_option_fec">Forward Error Correction</string>
    <string name="button_text_play">Play</string>
    <string name="button_text_listen">Listen</string>
    <string name="button_text_stop_listening">Stop Listening</string>
    <string name="empty_text_warning">Please type some text</string>

</resources>